--- a/deploy/frontend/styles.css
+++ b/deploy/frontend/styles.css
@@ -24,7 +24,7 @@ body {
 
 .title {
     font-size: 24px;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .input-wrapper {
@@ -62,4 +62,45 @@ body {
 .output {
     font-size: 18px;
     font-weight: bold;
+}
+
+.select-dropdown {
+    padding: 5px;
+    border-radius: 8%;
+    margin-bottom: 10px;
+    background-color: #4CAF50;
+    color: white;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+}
+
+.container-output {
+    margin-top: 20px;
+    width: 100%;
+    /* all items side by side */
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: center;
+}
+
+.output-section {
+    margin-bottom: 20px;
+}
+
+.output-title {
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.output {
+    padding: 10px;
+    font-family: Arial, sans-serif;
+    line-height: 1.5;
+}
+
+.output_snippet {
+    white-space: pre-wrap;
 }
